# RayTracer

./: CMakeLists.txt  README.md  main.cpp
Tests/: CameraTests.cpp  sphereTests.cpp
complexShapes/: House.cpp  StreetLamp.cpp
geometries/: Ellipsoid.cpp  Geometries.cpp  Geometry.cpp  Intersectable.cpp  Plane.cpp  Polygon.cpp  Sphere.cpp  Triangle.cpp
images/: Cylinder.ppm  Mini-project1.ppm  Polygon.ppm  StreepLamp.ppm  Tube.ppm  base render test.ppm  base render testfirst.ppm  color render test.ppm  color render testfirst.ppm  grid testfirst.ppm  lightSpherePoint.ppm  lightTrianglesDirectional.ppm  lightTrianglesPoint.ppm  lightTrianglesSpot.ppm  lightTrianglesSpotSharp.ppm  multipleLightTriangles.ppm  notebook.ppm  objTest.ppm  polygon.ppm  reflectionTwoSpheresMirrored.ppm  refractionShadow.ppm  refractionTwoSpheres.ppm  shadowTrianglesSphere.ppm
include/: AmbientLight.h  Camera.h  CameraTests.h  Color.h  GeoPoint.h  Geometries.h  Geometry.h  ImageWriter.h  Intersectable.h  Material.h  ObjParser.h  Point.h  Ray.h  RayTracer.h  Scene.h  Sphere.h  Triangle.h  Util.h  Vector.h
include/geometries/: GeoPoint.h  Geometries.h  Geometry.h  Intersectable.h  Plane.h  Sphere.h  Triangle.h
include/lights/: DirectionalLight.h  LightSource.h  PointLight.h  SpotLight.h
include/primitives/: Color.h  Material.h  Point.h  (+1 more)
lights/: AmbientLight.cpp  DirectionalLight.cpp  PointLight.cpp  SpotLight.cpp
primitives/: Color.cpp  GeoPoint.cpp  Material.cpp  Point.cpp  Ray.cpp  Util.cpp  Vector.cpp
renderer/: Camera.cpp  ImageWriter.cpp  Rasterizer.cpp  RayTracer.cpp  Scene.cpp
(+10 files in other folders)
